--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "nmss-luminate",
-  "description": "The framework used on NMSS Luminate Online web properties.",
+  "name": "lo-angularjs-components",
+  "description": "The AngularJS component library used for Luminate Online Services Projects.",
   "version": "1.0.0",
   "repository": [
     {
       "type": "git",
-      "url": "https://github.com/convio/nmss-luminate.git"
+      "url": "https://github.com/Blackbaud-WesGabbard/lo-angularjs-components"
     }
   ],
   "engines": {
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.1.5",
+    "bootstrap": "^4.1.3",
     "glob": "^7.1.3",
     "grunt-check-dependencies": "^1.0.0",
     "grunt-contrib-clean": "^2.0.0",
