--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "lo-angularjs-components",
+  "name": "luminate-ng-library",
   "description": "The AngularJS component library used for Luminate Online Services Projects.",
   "version": "1.0.0",
   "repository": [
     {
       "type": "git",
-      "url": "https://github.com/Blackbaud-WesGabbard/lo-angularjs-components"
+      "url": "https://github.com/Blackbaud-WesGabbard/luminate-ng-library"
     }
   ],
   "engines": {
@@ -17,6 +17,7 @@
     "load-grunt-tasks": "^4.0.0"
   },
   "devDependencies": {
+    "angular-luminate-utils": "^0.7.1",
     "autoprefixer": "^9.1.5",
     "bootstrap": "^4.1.3",
     "glob": "^7.1.3",
